--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
            <p><span>Phone:</span> +374 95 01 06 92</p>
             <p><span>Email:</span> marutyan.anna.web@gmail.
                 com</p> 
-            <button type="button"><a href="./images/Anna_Marutyan_cv_En.pdf" download="My CV" target="_blank">Download CV En</a></button>
-            <button type="button"><a href="./images/Anna_Marutyan_cv_Arm.pdf" download="My CV" target="_blank">Download CV Arm</a></button>
+            <button type="button"><a href="./images/Anna_Marutyan_cv_En.pdf" download="Anna_Marutyan_CV_En" target="_blank">Download CV En</a></button>
+            <button type="button"><a href="./images/Anna_Marutyan_cv_Arm.pdf" download="Anna_Marutyan_CV_Arm" target="_blank">Download CV Arm</a></button>
         </div>
     </section>
     <section id="Skills">
