--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
     <section id="Contacts">
         <div class="contacts-shadow">
-            <h1>Conatacts</h1>
+            <h1>Contacts</h1>
             <p>E-mail: marutyan.anna.web@gmail.
                 com</p>
             <strong>Tel: +374 95 01 06 92</strong>
