--- a/ShineSkin/index.htm
+++ b/ShineSkin/index.htm
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+     <div class="scrollbar">
+        <div class="progress"></div>
+    </div>
     <header id="Menu">
         <div class="fixed-img"></div>
         <nav>
