--- a/ShineSkin/index.htm
+++ b/ShineSkin/index.htm
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+     <div class="preloader">
+        <div class="loader"></div>
+    </div>
      <div class="scrollbar">
         <div class="progress"></div>
     </div>
