--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h1>Energy School</h1>
                         <strong>20.01.2024-20.02.2024</strong>
                         <p><span>Practice:</span><br>
-                        Working on a real project with specialists.</p>
+                        Working on an educational page with specialists.</p>
                     </div>
                 </div>
             </div>
