--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button type="button"><a href="./images/Anna_Marutyan_CV_En .pdf" download="Anna_Marutyan_CV_En" target="_blank">Download CV En</a></button>
             <button type="button"><a href="./images/Աննա_Մարության_CV_Հայ .pdf" download="Աննա_Մարության_CV_Հայ" target="_blank">Download CV Arm</a></button>
         </div>
-        <div class="education-experience">
+        <div class="education-experience" data-aos="fade-right">
             <div class="education-experience-shadow">
                 <h1>EDUCATION & EXPERICENCE</h1>
                 <div class="education">
