--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
     <section id="Portfolio">
         <h1>Portfolio</h1>
         <div class="portfolio-box">
-            <div class="portfolio">
+            <div class="portfolio" data-aos="zoom-in">
                 <h2>ShineSkin</h2>
                 <a href="./ShineSkin/index.htm" target="_blank"><img src="./images/Снимок экрана (4).png" alt=""></a>
             </div>
-            <div class="portfolio">
+            <div class="portfolio" data-aos="zoom-in">
                 <h2>Bubble Life</h2>
                 <a href="./Bubble-Life/index.htm" target="_blank"><img src="./images/Снимок экрана (5).png" alt=""></a>
             </div>
-            <div class="portfolio" style="margin-bottom: 0;">
+            <div class="portfolio" style="margin-bottom: 0;" data-aos="zoom-in">
                 <h2>Coffee</h2>
                 <a href="./Coffee/index.htm" target="_blank"><img src="./images/Снимок экрана (6).png" alt=""></a>
             </div>
