--- a/ShineSkin/index.htm
+++ b/ShineSkin/index.htm
@@ -41,8 +41,8 @@
     <section id="About">
         <img src="./img/pngwing.com (2).png" alt="" id="about-leaves">
         <h1>ABOUT US</h1>
-        <div class="about-img"></div>
-        <div class="about-text">
+        <div class="about-img" data-aos="fade-right"></div>
+        <div class="about-text" data-aos="fade-left">
             <h3>Shineskin</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusamus laudantium nesciunt illum, aliquam quis! Exercitationem qui nemo dolores sint, harum ea magni, animi molestiae perferendis, sunt asperiores nobis cum! Culpa voluptate rem placeat sed molestiae iusto natus porro autem doloribus eum ad expedita explicabo dolore optio et, a illo quisquam fuga ducimus ipsam aspernatur nobis cum beatae velit? Fugiat molestias repellendus corrupti nam odio accusamus, explicabo laudantium hic doloribus illum vitae doloremque velit ex, debitis aspernatur repellat itaque, distinctio porro consequatur.</p>
         </div>
