--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 com</p> 
             <p><span>Experience:</span> 1+ Year</p>
             <p><span>Freelance:</span> Available</p>
-            <button type="button"><a href="./images/Anna_Marutyan_CV_En .pdf" download="Anna_Marutyan_CV_En" target="_blank">Download CV En</a></button>
-            <button type="button"><a href="./images/Աննա_Մարության_CV_Հայ .pdf" download="Աննա_Մարության_CV_Հայ" target="_blank">Download CV Arm</a></button>
+            <button type="button"><a href="./images/Anna_Marutyan_CV_En2.pdf" download="Anna_Marutyan_CV_En2" target="_blank">Download CV En</a></button>
+            <button type="button"><a href="./images/Աննա_Մարության_CV_Հայ2.pdf" download="Աննա_Մարության_CV_Հայ2" target="_blank">Download CV Arm</a></button>
         </div>
         <div class="education-experience" data-aos="fade-right">
             <div class="education-experience-shadow">
