--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <section id="Home">
         <div class="home-info" data-aos="zoom-in">
-            <h1>ANNA MARUTYAN</h1>
+            <h1></h1>
             <p>Front End Developer</p>
         </div>
         <button id="up-button"><i class="fa-solid fa-arrow-up"></i></button>
@@ -48,8 +48,7 @@
                 com</p> 
             <p><span>Experience:</span> 1+ Year</p>
             <p><span>Freelance:</span> Available</p>
-            <button type="button"><a href="./images/Anna_Marutyan_CV_En2.pdf" download="Anna_Marutyan_CV_En2" target="_blank">Download CV En</a></button>
-            <button type="button"><a href="./images/Աննա_Մարության_CV_Հայ2 .pdf" download="Աննա_Մարության_CV_Հայ2" target="_blank">Download CV Arm</a></button>
+            <button type="button"><a href="./images/Anna_Marutyan_CV.pdf" download="Anna_Marutyan_CV" target="_blank">Download CV</a></button>
         </div>
         <div class="education-experience" data-aos="fade-right">
             <div class="education-experience-shadow">
@@ -57,13 +56,13 @@
                 <div class="education">
                     <h1>My education in Web programming</h1>
                     <div class="education-box">
-                        <h1>Energy School</h1>
-                        <strong>15.10.2023-15.02.2024</strong>
-                        <p>JavaScript courses</p>
+                        <h1>Teach me</h1>
+                        <strong>05.2025 - Present</strong>
+                        <p>JavaScript course</p>
                     </div>
                     <div class="education-box">
                         <h1>Energy School</h1>
-                        <strong>15.06.2023-15.10.2023</strong>
+                        <strong>10.2023-02.2024</strong>
                         <p>Web development for beginners</p>                    
                     </div>
                 </div>
@@ -71,7 +70,7 @@
                     <h1>Experience</h1>
                     <div class="experience-box">
                         <h1>Energy School</h1>
-                        <strong>20.01.2024-20.02.2024</strong>
+                        <strong>01.2024 - 02.2024</strong>
                         <p><span>Practice:</span><br>
                         Working on an educational page with specialists.</p>
                     </div>
@@ -110,8 +109,10 @@
         </div>
         <div class="also-use-skliis-box" data-aos="zoom-in">     
             <h1>I also use...</h1>
+            <div class="also-use-skills">React</div>
             <div class="also-use-skills">Slick slider</div>
             <div class="also-use-skills">AOS</div>
+            <div class="also-use-skills">Teilwind</div>
         </div>
         <img src="./images/Lovepik_com-401373103-programmer-knocking-code-work-icon-free-vector-illustration-mate.png" class="programmer-img"  alt="Programmer">
     </section>
@@ -143,5 +144,6 @@
     <footer>ANNA MARUTYAN</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/main.js"></script>
+    
 </body>
 </html>
